# walle_poc

./: .env  .gitignore  Cargo.toml  Makefile  README.md  commands.json  main.tf  variables.tf
main/: .gitignore  .terraform.lock.hcl  Cargo.toml  Makefile  main.tf
main/register_test/: index.js  package.json
main/src/: commands.rs  discord.rs  main.rs  validator.rs
main/terraform/: main.tf  variables.tf
register/: Cargo.toml
register/src/: main.rs
register_test/: index.js  package-lock.json
src/: lib.rs  main.rs  validator.rs
