[package]
name = "register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.88"
tokio = { version = "1.22.0", features = ["full"] }
